--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "bootstrap": "^3.3.7",
     "bootstrap-social": "^5.1.1",
     "font-awesome": "^4.7.0",
+    "gsap": "^1.20.3",
     "jquery": "^1.12.4",
-    "jquery-migrate": "^1.4.1",
+    "jquery-waypoints": "^2.0.5",
     "jquery.easing": "^1.3.2",
+    "js-cookie": "^2.1.4",
     "simple-line-icons": "^2.4.1",
     "socicon": "^3.0.5",
     "vue": "^2.5.2",
